# tikzplotlib

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  README.md  conftest.py  justfile  pyproject.toml
.github/workflows/: ci.yml
doc/: conf.py  index.rst
examples/: README.md  showcase.ipynb
src/tikzplotlib/: __about__.py  __init__.py  _axes.py  _cleanfigure.py  _color.py  _hatches.py  _legend.py  _mpl_compat.py  _patch.py  _path.py  _save.py  _text.py  _util.py
tests/: test_arrows.py  test_cleanfigure.py  test_custom_collection.py  test_datetime_paths_reference.tex  test_datetime_reference.tex  test_hatch_reference.tex  test_heat.py  test_legend_best_location_reference.tex  test_legends2.py  test_loglogplot_reference.tex  test_logplot_base_reference.tex  test_logplot_reference.tex  test_mpl_compat.py  test_pandas_dataframe_reference.tex  test_patches_reference.tex
