[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tikzplotlib"
authors = [{name = "Nico Schlömer", email = "nico.schloemer@gmail.com"}]
description = "Convert matplotlib figures into TikZ/PGFPlots"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Matplotlib",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
  "Topic :: Scientific/Engineering :: Visualization",
]
keywords = ["latex", "tikz", "matplotlib", "graphics"]
version = "0.10.1"
requires-python = ">=3.9"
dependencies = [
  "matplotlib >= 1.4.0",
  "numpy",
  "Pillow",
  "webcolors",
]

[project.urls]
Code = "https://github.com/nschloe/tikzplotlib"
Issues = "https://github.com/nschloe/tikzplotlib/issues"
Funding = "https://github.com/sponsors/nschloe"

[dependency-groups]
dev = [
  "pandas",
  "pytest",
  "pytest-cov",
  "pytest-codeblocks",
  "pytest-randomly",
]
lint = [
  "black",
  "blacken-docs",
  "flake8",
  "isort",
]

[tool.isort]
profile = "black"
